# wit-bindgen-wasm3

./: .gitmodules  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
codegen/: Cargo.toml
codegen/examples/: cli.rs
codegen/src/: lib.rs
codegen/tests/: codegen.rs
codegen/tests/data/: single-function.generated.rs  single-function.wit
codegen/tests/fixtures/: bitflags.wit  record.wit  resource.wit  thunk.wit
codegen/tests/snapshots/: codegen__export__bitflags.snap  codegen__export__empty.snap  codegen__export__record.snap  codegen__export__single_function.snap  codegen__export__thunk.snap  codegen__import__bitflags.snap  codegen__import__record.snap  codegen__import__single_function.snap  codegen__import__thunk.snap
heck/: all.html  index.html  trait.CamelCase.html  trait.KebabCase.html  trait.MixedCase.html  trait.ShoutyKebabCase.html  trait.ShoutySnakeCase.html  trait.ShoutySnekCase.html  trait.SnakeCase.html  trait.SnekCase.html  trait.TitleCase.html
id_arena/: all.html  index.html  struct.Arena.html  struct.DefaultArenaBehavior.html  struct.Id.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.ArenaBehavior.html
macros/: Cargo.toml  guest.wit  host.wit
macros/src/: lib.rs
memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
pulldown_cmark/: all.html  enum.Alignment.html  enum.CodeBlockKind.html  enum.CowStr.html  enum.Event.html  enum.LinkType.html  enum.Tag.html  index.html  struct.BrokenLink.html  struct.InlineStr.html  struct.OffsetIter.html  struct.Options.html  struct.Parser.html
tinyvec/: all.html  enum.TinyVec.html  enum.TinyVecDrain.html  enum.TinyVecIterator.html  index.html  macro.array_vec.html  macro.tiny_vec.html  struct.ArrayVec.html  struct.ArrayVecDrain.html  struct.ArrayVecIterator.html  struct.ArrayVecSplice.html  struct.SliceVec.html  struct.SliceVecDrain.html  struct.TinyVecSplice.html  struct.TryFromSliceError.html  trait.Array.html
tinyvec_macros/: all.html  index.html  macro.impl_mirrored.html
unicase/: all.html  fn.eq.html  fn.eq_ascii.html  index.html  struct.Ascii.html  struct.UniCase.html
unicode_normalization/: all.html  constant.UNICODE_VERSION.html  enum.IsNormalized.html  fn.is_nfc.html  fn.is_nfc_quick.html  fn.is_nfc_stream_safe.html  fn.is_nfc_stream_safe_quick.html  fn.is_nfd.html  fn.is_nfd_quick.html  fn.is_nfd_stream_safe.html  fn.is_nfd_stream_safe_quick.html  fn.is_nfkc.html  fn.is_nfkc_quick.html  fn.is_nfkd.html  fn.is_nfkd_quick.html  index.html  struct.Decompositions.html  struct.Recompositions.html  struct.Replacements.html  struct.StreamSafe.html  trait.UnicodeNormalization.html
unicode_segmentation/: all.html  constant.UNICODE_VERSION.html  enum.GraphemeIncomplete.html  index.html  struct.GraphemeCursor.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.USentenceBoundIndices.html  struct.USentenceBounds.html  struct.UWordBoundIndices.html  struct.UWordBounds.html  struct.UnicodeSentences.html  struct.UnicodeWordIndices.html  struct.UnicodeWords.html  trait.UnicodeSegmentation.html
wasm3/: Cargo.toml
wasm3/src/: exports.rs  imports.rs  lib.rs  region.rs
wit_bindgen_gen_core/: all.html  enum.Direction.html  fn.load.html  index.html  struct.Files.html  struct.Ns.html  struct.Source.html  struct.TypeInfo.html  struct.Types.html  trait.Generator.html
wit_bindgen_gen_rust/: all.html  enum.TypeMode.html  fn.bitcast.html  fn.case_name.html  fn.int_repr.html  fn.to_rust_ident.html  fn.wasm_type.html  index.html  struct.FnSig.html  trait.RustFunctionGenerator.html  trait.RustGenerator.html
wit_bindgen_gen_wasm3/: all.html  enum.Async.html  index.html  sidebar-items.js  struct.Opts.html  struct.Wasmtime.html
wit_bindgen_wasm3/: all.html  index.html
wit_bindgen_wasm3_impl/: all.html  index.html
wit_parser/: all.html  enum.FunctionKind.html  enum.Int.html  enum.RecordKind.html  enum.Type.html  enum.TypeDefKind.html  fn.validate_id.html  index.html  struct.Case.html  struct.Docs.html  struct.Field.html  struct.Function.html  struct.Global.html  struct.Interface.html  struct.Record.html  struct.Resource.html  struct.SizeAlign.html  struct.TypeDef.html  struct.Variant.html  (+3 more)
(+169 files in other folders)
