[package]
name = "wit-bindgen-gen-wasm3"
version = "0.1.0"
edition = "2021"
description = "Code generation for linking WIT interfaces with a WASM3 host."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-gen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[dev-dependencies]
pretty_assertions = "1.2.0"
structopt = "0.3"
