[package]
name = "wit-bindgen-gen-wasm3"
version = "0.1.0"
edition = "2021"
description = "Code generation for linking WIT interfaces with a WASM3 host."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3"
proc-macro2 = "1.0.36"
quote = "1.0.16"
structopt = { version = "0.3", default-features = false, optional = true }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-gen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-parser = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.0"
structopt = "0.3"
