[package]
name = "wit-bindgen-wasm3-impl"
version = "0.1.0"
edition = "2021"
description = "Procedural macro that generates code for linking WIT interfaces with a WASM3 host."

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-gen-wasm3 = { version = "0.1.0", path = "../codegen" }
